--- a/EmployeeHandlerSystem/EmployeeHandlerSystem/EmployeeHandlerSystem.csproj
+++ b/EmployeeHandlerSystem/EmployeeHandlerSystem/EmployeeHandlerSystem.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Refit.Newtonsoft.Json" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\Components\Profile\" />
+  </ItemGroup>
+
 </Project>
